--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,10 @@
         Algunas características pueden no funcionar correctamente."> <strong> BETA </strong> </span>
     </div>
     <a mat-button [routerLink]="['/']" style="white-space: normal; display: flex; align-items: center;">
-        <img src="/assets/icons/logo.sceiba.letras.svg" alt="Sceiba" style="height: 50px; margin-right: 6px;">        
+        <img src="/assets/icons/logo.sceiba.letras.svg" alt="Sceiba" style="height: 50px; margin-right: 6px;">
     </a>
   </div>
-    
+
     <div
         class="center-elements"
         appearance="legacy"
@@ -95,22 +95,22 @@
 
 <mat-menu #menuApps="matMenu">
   <div fxLayout="row wrap" fxLayoutAlign="space-around center">
-    <a href="https://sceiba.cu" target="__blanck" class="apps" matTooltip="Sceiba">
+    <a href="https://sceiba.cu" target="_blank" class="apps" matTooltip="Sceiba">
         <img  class="app-featured" src="/assets/icons/sceiba.svg" alt="Sceiba" style="width: 55px; height: 55px;">
     </a>
     <mat-divider class="w-90"></mat-divider>
 
-    <a href="https://catalogo.sceiba.cu" target="__blanck" class="apps" matTooltip="Catálogo">
+    <a href="https://catalogo.sceiba.cu" target="_blank" class="apps" matTooltip="Catálogo">
       <img src="/assets/icons/catalog.svg" alt="Catálogo" style="width: 55px; height: 55px;">
     </a>
-    <a href="https://orgs.sceiba.cu" target="__blanck" class="apps" matTooltip="Organizaciones">
+    <a href="https://orgs.sceiba.cu" target="_blank" class="apps" matTooltip="Organizaciones">
         <img src="/assets/icons/organizacion.svg" alt="Organizaciones" style="width: 55px; height: 55px;">
     </a>
-    <a href="https://vocs.sceiba.cu" target="__blanck" class="apps" matTooltip="Vocabularios">
+    <a href="https://vocabularios.sceiba.cu" target="_blank" class="apps" matTooltip="Vocabularios">
         <img src="/assets/icons/vocabs.svg" alt="Vocabularios" style="width: 55px; height: 55px;">
     </a>
     <mat-divider class="w-90"></mat-divider>
-    <a href="https://sceiba.cu" target="__blanck" class="apps"  matTooltip="Registro de Revistas Científicas del MES">
+    <a href="https://revistasmes.sceiba.cu" target="_blank" class="apps"  matTooltip="Registro de Revistas Científicas del MES">
         <img class="app-featured" src="/assets/icons/mes.svg" alt="Registro de Revistas Científicas del MES" style="width: 55px; height: 55px;">
     </a>
 </div>
