--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,13 @@
-    
+
     <img src="assets/icons/sceiba.footer.top.2.svg" alt="" style="margin-bottom: -8px; width: 100%;">
     <div class="w-100 bg-primary-color" fxLayout="row wrap" fxLayout.mx="column" fxLayoutAlign="center center">
 
-        <div            
+        <div
             fxLayout="row wrap"
             fxLayout.mx="column"
             fxLayoutAlign="space-between center"
-            fxLayoutGap="20px"  
-            style="width:100%"          
+            fxLayoutGap="20px"
+            style="width:100%"
         >
             <div class="footer-logo" fxFlex=30% fxLayoutAlign="center center" fxLayout="row">
                 <img src="/assets/images/tocororo.png" alt="Tocororo" width="50" height="50">
@@ -26,7 +26,7 @@
                 </a>
             </div>
         </div>
-    
+
         <mat-toolbar class="footer-height" fxLayout="row wrap" fxLayout.mx="column" fxLayoutAlign="center center" color="primary">
             <mat-toolbar-row
                 fxLayout="row wrap"
@@ -56,8 +56,8 @@
                     </a>
                 </ng-container>
             </mat-toolbar-row>
-    
-            <mat-toolbar-row 
+
+            <mat-toolbar-row
                 fxLayout="row wrap"
                 fxLayout.xs="column"
                 fxLayoutAlign="center center"
@@ -83,32 +83,32 @@
                         {{ item.name }}
                     </a>
                 </ng-container>
-            </mat-toolbar-row>           
+            </mat-toolbar-row>
             <mat-toolbar-row fxLayout="row wrap" fxFlex="100%" fxLayoutAlign="center center">
                 <p class="mat-h5" style="width: 80%; text-align: center; color:white; margin: 0; padding-top: 40px;">
-                    Sceiba es de código y acceso abierto y distribuye sus contenidos, 
+                    Sceiba es de código y acceso abierto y distribuye sus contenidos,
                     <br>a no ser que se indique lo contrario, bajo la Licencia <a class="a-grey" href="http://creativecommons.org/licenses/by/4.0/" target="_blank">  Creative Commons CC by 4.0</a>
                 </p>
-            </mat-toolbar-row>            
+            </mat-toolbar-row>
 
         </mat-toolbar>
-    
+
     <div fxLayout="column wrap" fxLayoutAlign="center center" style="padding: 1em;">
         <a href="https://sceiba.cu"style="color: rgb(0, 0, 0, 0.87); text-decoration: none;">
             <img src="/assets/icons/sceiba_white.svg" alt="Sceiba" width="120" height="50">
         </a>
         <p class="mat-h5" style="width: 80%; text-align: center; color:white; margin: 0;">
-            Portal de publicaciones científicas cubanas 
+            Portal de publicaciones científicas cubanas
             <br>
             <small>
-                Desarrollado con 
-                <a class="a-grey" href="https://invenio-app-readthedocs.io/" target="_blank">Invenio</a> 
-                y <a class="a-grey" href="https://angular.io/" target="_blank">Angular</a> 
+                Desarrollado con
+                <a class="a-grey" href="https://invenio-software.org/" target="_blank">Invenio</a>
+                y <a class="a-grey" href="https://angular.io/" target="_blank">Angular</a>
             </small>
         </p>
-        
+
     </div>
-    
+
 </div>
 
 <!-- <span class="text-initial" style="max-width: 30em; text-align: center;">Proyecto Nacional Tocororo, un esfuerzo por la comunicación científica en Cuba. </span> -->
