--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,18 @@
 
 <div fxLayout="column" fxLayoutAlign="center center">
-    <div class="w-100 bg-primary-color" fxLayout="column" fxLayoutAlign="center center">
+    <div class="w-100 bg-primary-color" fxLayoutAlign="center center">
         <div class="pt-50 ph-10">
             <h3 class="mat-display-2" style="text-align: center;">Publicaciones Científicas Cubanas</h3>
-        </div>
-        <div class="w-70 ph-10" fxFlex="70%" ngClass.xs="w-100">    
-            <toco-search-query-input [query]="''" (queryChange)="queryChange($event)" style="width: 100%;" [buttonColor]="'accent'" ></toco-search-query-input>
-        </div>
-    </div>    
+        </div>        
+    </div>  
+    <mat-toolbar color="primary" style="font-size: initial;">       
+        <mat-toolbar-row fxLayoutAlign="center center" style="height: auto; white-space: normal;">
+            <div fxLayout="column" fxLayoutAlign="center center" fxFlex="70%" fxFlex.lt-sm="100%">
+                <toco-search-query-input [buttonColor]="'accent'" [query]="''" (queryChange)="queryChange($event)" class="w-100"></toco-search-query-input>                
+            </div>
+        </mat-toolbar-row>
+    </mat-toolbar>
+
     <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;">
     
     <div class="w-50 pt-50 ph-10" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around center">
