--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -35,6 +35,11 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+.ph-30 {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 .w-20{
     width: 25%;
     min-width: 15em;
