--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -38,3 +38,8 @@ mat-toolbar.footer-height{
     padding-right: 120px;
     margin-left: auto;
 }
+
+.footer-rigtside{
+    padding-right: 40px;
+    margin-left: auto;
+}
