--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,15 +1,15 @@
+<mat-toolbar
+  color="accent"
+  fxLayout="row wrap"
+  fxLayout.xs="column"
+  fxLayoutAlign="space-between center"
+  style="height: 80px"
+>
+  <span>Búsqueda</span>
 
-<mat-toolbar color="accent"
-    fxLayout="row wrap"
-    fxLayout.xs="column"
-    fxLayoutAlign="space-between center"
-    style="height: 80px;">
+  <!-- <div *ngIf="search_type; then search_list_button else search_charts_button"></div> -->
 
-    <span>Búsqueda</span>
-
-    <!-- <div *ngIf="search_type; then search_list_button else search_charts_button"></div> -->
-
-    <!-- <ng-template #search_list_button>
+  <!-- <ng-template #search_list_button>
       <button mat-icon-button  matTooltip="Estadisticas" (click)="changeView()">
         <mat-icon>insert_chart</mat-icon>
       </button>
@@ -20,109 +20,107 @@
         <mat-icon>list</mat-icon>
       </button>
     </ng-template> -->
-
 </mat-toolbar>
 
 <toco-progress [loading]="loading"></toco-progress>
 
 <mat-drawer-container autosize>
-    <mat-drawer #drawer mode="side" opened position="start">
-     <!--  <app-aggregations fxLayout="row wrap" fxLayout.xs="column wrap" fxFlex="{{ currentlayout.width }}"
+  <mat-drawer #drawer mode="side" opened position="start">
+    <!--  <app-aggregations fxLayout="row wrap" fxLayout.xs="column wrap" fxFlex="{{ currentlayout.width }}"
         fxLayoutAlign="start center" fxLayoutAlign.xs="center center" fxLayoutGap="1em"
         class=" back-grey mat-elevation-z8"></app-aggregations>
       <toco-org-search></toco-org-search>  -->
-      <toco-search-aggregations
-        *ngIf="sr"
-        [aggregations]="sr.aggregations"
-        [selectedAggr]="aggrsSelection"
-        (keySelect)="aggrChange($event)"
+    <toco-search-aggregations
+      *ngIf="sr"
+      [aggregations]="sr.aggregations"
+      [selectedAggr]="aggrsSelection"
+      (keySelect)="aggrChange($event)"
+    ></toco-search-aggregations>
 
-      ></toco-search-aggregations>
-
-      <!-- <toco-search-aggregations-visual
+    <!-- <toco-search-aggregations-visual
         *ngIf="sr"
         [aggregations]="aggr_keys"
         [selectedAggr]="aggrsSelection"
         (keySelect)="aggrChange($event)"
       ></toco-search-aggregations-visual> -->
+  </mat-drawer>
 
-    </mat-drawer>
-
-    <div *ngIf="search_type; then search_list else search_charts">{{search_type}}</div>
-
-<!-- templatefor search list -->
-<ng-template #search_list>
-
-  <div class="m-1" *ngIf="sr">
-
-    <div fxLayout="row nowrap" fxLayoutAlign="space-between center">
-      <button
-        mat-icon-button
-        (click)="drawer.toggle()"
-        matTooltip="Filtros avanzados"
-      >
-        <mat-icon>filter_list</mat-icon>
-      </button>
-      <toco-search-query-input [query]="query" class="p-1" (queryChange)="queryChange($event)" style="width: 100%;"></toco-search-query-input>
-    </div>
-
-    <mat-paginator
-      [length]="sr.hits.total"
-      [pageSize]="pageSize"
-      [pageIndex]="pageIndex"
-      [pageSizeOptions]="pageSizeOptions"
-      (page)="pageChange($event)"
-    >
-    </mat-paginator>
-
-    <search-list [hitList]="sr.hits"></search-list>
-
-    <mat-paginator
-      [length]="sr.hits.total"
-      [pageSize]="pageSize"
-      [pageIndex]="pageIndex"
-      [pageSizeOptions]="pageSizeOptions"
-      (page)="pageChange($event)"
-    >
-    </mat-paginator>
+  <div *ngIf="search_type; then search_list; else search_charts">
+    {{ search_type }}
   </div>
-</ng-template>
 
-<!-- template for charts -->
-<ng-template #search_charts>
+  <!-- templatefor search list -->
+  <ng-template #search_list>
+    <div class="m-1" *ngIf="sr">
+      <div fxLayout="row nowrap" fxLayoutAlign="space-between center">
+        <button
+          mat-icon-button
+          (click)="drawer.toggle()"
+          matTooltip="Filtros avanzados"
+        >
+          <mat-icon>filter_list</mat-icon>
+        </button>
+        <toco-search-query-input
+          [query]="query"
+          class="p-1"
+          (queryChange)="queryChange($event)"
+          style="width: 100%"
+        ></toco-search-query-input>
+      </div>
 
-  <div class="m-1" *ngIf="sr">
-
-    <div fxLayout="row nowrap" fxLayoutAlign="space-between center">
-      <button
-        mat-icon-button
-        (click)="drawer.toggle()"
-        matTooltip="Filtros avanzados"
+      <mat-paginator
+        [length]="sr.hits.total"
+        [pageSize]="pageSize"
+        [pageIndex]="pageIndex"
+        [pageSizeOptions]="pageSizeOptions"
+        (page)="pageChange($event)"
       >
-        <mat-icon>filter_list</mat-icon>
-      </button>
+      </mat-paginator>
 
-      <mat-card>
-        <!-- <section class="example-section"> -->
-         <!--  <label class="example-margin">Align:</label> -->
+      <search-list [hitList]="sr.hits"></search-list>
+
+      <mat-paginator
+        [length]="sr.hits.total"
+        [pageSize]="pageSize"
+        [pageIndex]="pageIndex"
+        [pageSizeOptions]="pageSizeOptions"
+        (page)="pageChange($event)"
+      >
+      </mat-paginator>
+    </div>
+  </ng-template>
+
+  <!-- template for charts -->
+  <ng-template #search_charts>
+    <div class="m-1" *ngIf="sr">
+      <div fxLayout="row nowrap" fxLayoutAlign="space-between center">
+        <button
+          mat-icon-button
+          (click)="drawer.toggle()"
+          matTooltip="Filtros avanzados"
+        >
+          <mat-icon>filter_list</mat-icon>
+        </button>
+
+        <mat-card>
+          <!-- <section class="example-section"> -->
+          <!--  <label class="example-margin">Align:</label> -->
           <!-- <mat-radio-group [(ngModel)]="typeChart">
             <mat-radio-button class="example-margin" value="Polar Chart">Pastel</mat-radio-button>
             <mat-radio-button class="example-margin" value="Vertical Bar">Barra</mat-radio-button>
             <mat-radio-button class="example-margin" value="Gauge Chart">Calibración</mat-radio-button>
          </mat-radio-group> -->
-        <!-- </section> -->
-      </mat-card>
+          <!-- </section> -->
+        </mat-card>
+      </div>
 
-    </div>
-
-    <toco-search-aggregations-visual
+      <toco-search-aggregations-visual
         *ngIf="sr"
         [typeChart]="typeChart"
         [aggregations]="aggr_keys"
         [selectedAggr]="aggrsSelection"
         (keySelect)="aggrChange($event)"
       ></toco-search-aggregations-visual>
-  </div>
-</ng-template>
-
-  </mat-drawer-container>
+    </div>
+  </ng-template>
+</mat-drawer-container>
