--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -171,6 +171,10 @@
     <mat-icon>exit_to_app</mat-icon>
     Salir
   </a>
+  <a mat-menu-item  (click)="me()"> 
+    <mat-icon>exit_to_app</mat-icon>
+    me
+  </a>
 
 </mat-menu>
 
