--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,14 @@
       fxLayoutAlign="center"
       fxLayoutGap="15px"
     >
+      <button
+        mat-icon-button
+        [matMenuTriggerFor]="menuLanguages"
+        matTooltip="Idioma (se está Haciendo!!!)"
+      >
+        <mat-icon class="mat-18">help</mat-icon>
+      </button>
+
       <!-- <button mat-icon-button [matMenuTriggerFor]="menuNetwork" matTooltip="Redes Sociales">
                 <mat-icon>share</mat-icon>
             </button> -->
@@ -47,7 +55,11 @@
         <mat-icon>apps</mat-icon>
       </button>
 
-      <button mat-icon-button [matMenuTriggerFor]="menuHelp" matTooltip="Ayuda">
+      <button
+        mat-icon-button
+        [matMenuTriggerFor]="menuHelp"
+        matTooltip="Ayuda"
+      >
         <mat-icon class="mat-18">help</mat-icon>
       </button>
 
@@ -80,17 +92,28 @@
       return false;
     }ccount_circle</mat-icon>
       </button> -->
-      <button mat-icon-button *ngIf="name" [matMenuTriggerFor]="menuUser" matTooltip="{{ name }}">
+      <button mat-icon-button *ngIf="name" matTooltip="{{ name }}" [matMenuTriggerFor]="menuUser">
         <mat-icon class="mat-18">person_pin</mat-icon>
       </button>
 
-      <button mat-icon-button matTooltip="Autenticarse" *ngIf="!name" [matMenuTriggerFor]="menuLogin">
+      <button mat-icon-button *ngIf="!name" matTooltip="Autenticarse" [matMenuTriggerFor]="menuLogin">
         <mat-icon class="mat-18">account_circle</mat-icon>
       </button>
 
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
+
+<mat-menu #menuLanguages="matMenu">
+  <a mat-menu-item (click)="setLanguage()">
+    <mat-icon>info</mat-icon>
+    Español
+  </a>
+  <a mat-menu-item (click)="setLanguage()">
+    <mat-icon>security</mat-icon>
+    English
+  </a>
+</mat-menu>
 
 <!-- <mat-menu #menuNetwork="matMenu">
   <a mat-menu-item href="https://www.facebook.com/sceiba/" target="_blank">
@@ -118,7 +141,6 @@
     <mat-icon>security</mat-icon>
     Privacidad
   </a>
-
   <a mat-menu-item [routerLink]="['/contact']">
     <mat-icon>contacts</mat-icon>
     Contactos
@@ -126,7 +148,6 @@
 </mat-menu>
 
 <mat-menu #menuLogin="matMenu">
-
   <a mat-menu-item (click)="login()">
       <mat-icon>lock</mat-icon>
       Autenticarse
@@ -177,8 +198,6 @@
   </a>
 
 </mat-menu>
-
-
 
 <mat-menu #menuApps="matMenu">
   <div fxLayout="row wrap" fxLayoutAlign="space-around center">
