--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,19 +37,23 @@
       <button
         mat-icon-button
         [matMenuTriggerFor]="menuLanguages"
-        matTooltip="Idioma (se está Haciendo!!!)"
+        matTooltip="{{ 'IDIOMA' | translate }}"
       >
         <mat-icon class="mat-18">translate</mat-icon>
       </button>
 
-      <!-- <button mat-icon-button [matMenuTriggerFor]="menuNetwork" matTooltip="Redes Sociales">
-                <mat-icon>share</mat-icon>
-            </button> -->
+      <!-- <button
+        mat-icon-button
+        [matMenuTriggerFor]="menuNetwork"
+        matTooltip="{{ 'REDES_SOC' | translate }}"
+      >
+        <mat-icon>share</mat-icon>
+      </button> -->
 
       <button
         mat-icon-button
         [matMenuTriggerFor]="menuApps"
-        matTooltip="Aplicaciones"
+        matTooltip="{{ 'APLICACIONES' | translate }}"
       >
         <mat-icon>apps</mat-icon>
       </button>
@@ -57,7 +61,7 @@
       <button
         mat-icon-button
         [matMenuTriggerFor]="menuHelp"
-        matTooltip="Ayuda"
+        matTooltip="{{ 'AYUDA' | translate }}"
       >
         <mat-icon class="mat-18">help</mat-icon>
       </button>
@@ -65,37 +69,24 @@
       <!-- <button
         mat-icon-button
         [matMenuTriggerFor]="menuLogin"
-        matTooltip="Usuario"
+        matTooltip="{{ 'USUARIO' | translate }}"
       >
-        <mat-icon class="mat-18">a/**
-     * hasPermission return true if the user have permission
-     */
-    public get hasPermission(): boolean {
-      let permission = new Permission();
-  
-      if (permission.hasPermissions("curator") || permission.hasPermissions("admin")){
-        return true;
-      }
-      return false;
-    }
-  
-      /**
-     * hasPermission return true if the user have permission
-     */
-    public get hasPermissionAdmin(): boolean {
-      let permission = new Permission();
-  
-      if (permission.hasPermissions("admin")){
-        return true;
-      }
-      return false;
-    }ccount_circle</mat-icon>
+        <mat-icon class="mat-18">account_circle</mat-icon>
       </button> -->
-      <button mat-icon-button *ngIf="name" matTooltip="{{ name }}" [matMenuTriggerFor]="menuUser">
+
+      <button *ngIf="name"
+        mat-icon-button
+        [matMenuTriggerFor]="menuUser"
+        matTooltip="{{ name }}"
+      >
         <mat-icon class="mat-18">person_pin</mat-icon>
       </button>
 
-      <button mat-icon-button *ngIf="!name" matTooltip="Autenticarse" [matMenuTriggerFor]="menuLogin">
+      <button *ngIf="!name"
+        mat-icon-button
+        [matMenuTriggerFor]="menuLogin"
+        matTooltip="{{ 'AUTENTICARSE' | translate }}"
+      >
         <mat-icon class="mat-18">account_circle</mat-icon>
       </button>
 
@@ -121,8 +112,7 @@
   <a mat-menu-item href="https://twitter.com/SceibaCu" target="_blank">
       Twitter
   </a>
-  <a mat-menu-item href="https://github.com/tocororo"
-    target="_blank">
+  <a mat-menu-item href="https://github.com/tocororo" target="_blank">
       GitHub
   </a>
 </mat-menu> -->
@@ -130,70 +120,72 @@
 <mat-menu #menuHelp="matMenu">
   <!-- <a mat-menu-item [routerLink]="['/help']">
       <mat-icon>help_outline</mat-icon>
-      Ayuda
+      {{ 'AYUDA' | translate }}
   </a> -->
+
   <a mat-menu-item [routerLink]="['/about']">
     <mat-icon>info</mat-icon>
-    Acerca de
+    {{ 'ACERCA_DE' | translate }}
   </a>
   <a mat-menu-item [routerLink]="['/policy']">
     <mat-icon>security</mat-icon>
-    Privacidad
+    {{ 'PRIVACIDAD' | translate }}
   </a>
   <a mat-menu-item [routerLink]="['/contact']">
     <mat-icon>contacts</mat-icon>
-    Contactos
+    {{ 'CONTACTOS' | translate }}
   </a>
 </mat-menu>
 
 <mat-menu #menuLogin="matMenu">
   <a mat-menu-item (click)="login()">
       <mat-icon>lock</mat-icon>
-      Autenticarse
+      {{ 'AUTENTICARSE' | translate }}
   </a>
   <a mat-menu-item (click)="login()" >
     <!-- href="{{ urlSignUp }}" -->
       <mat-icon>assignment_ind</mat-icon>
-      Registarse
+      {{ 'REGISTRARSE' | translate }}
   </a>
 </mat-menu>
 
 <mat-menu #menuUser="matMenu">
   <!-- <a mat-menu-item [routerLink]="['/disambiguate']" *ngIf="hasPermission">
     <mat-icon>mode_edit</mat-icon>
-    Desambiguar Organizaciones
+    {{ 'DES_ORGANIZACIONES' | translate }}
   </a>
   <a mat-menu-item [routerLink]="['/import']" *ngIf="hasPermissionAdmin">
     <mat-icon>file_upload</mat-icon>
-    <span class="mymatBadge" matBadge="beta" matBadgeColor="warn" matBadgePosition="after"> Importar </span>
+    <span class="mymatBadge" matBadge="beta" matBadgeColor="warn" matBadgePosition="after">{{ 'IMPORT' | translate }}</span>
   </a> -->
+
   <a mat-menu-item href="{{ sceibaHost }}account/settings/profile/">
     <mat-icon>account_circle</mat-icon>
-    Perfil de usuario
+    {{ 'PERFIL_USUARIO' | translate }}
   </a>
   <a mat-menu-item href="{{ sceibaHost }}account/settings/password/">
     <mat-icon>vpn_key</mat-icon>
-    Cambiar contraseña
+    {{ 'CAMBIAR_CONTRASEÑA' | translate }}
   </a>
   <a mat-menu-item href="{{ sceibaHost }}account/settings/security/">
     <mat-icon>security</mat-icon>
-    Seguridad
+    {{ 'SEGURIDAD' | translate }}
   </a>
   <a mat-menu-item href="{{ sceibaHost }}account/settings/applications/">
     <mat-icon>settings_applications</mat-icon>
-    Aplicaciones
+    {{ 'APLICACIONES' | translate }}
   </a>
   <!-- <a mat-menu-item href="{{ sceibaHost }}admin/" *ngIf="hasPermissionAdmin">
     <mat-icon>settings</mat-icon>
-    Administración
+    {{ 'ADMINISTRACION' | translate }}
   </a> -->
-  <a mat-menu-item  (click)="logoff()"> 
+  <a mat-menu-item (click)="logoff()"> 
     <mat-icon>exit_to_app</mat-icon>
-    Salir
+    {{ 'SALIR' | translate }}
   </a>
-  <a mat-menu-item  (click)="me()"> 
+  <a mat-menu-item (click)="me()"> 
     <mat-icon>exit_to_app</mat-icon>
-    me
+    {{ 'YO' | translate }}
   </a>
 
 </mat-menu>
@@ -276,8 +268,8 @@
     background: linear-gradient(to right, #007e3e, #373131);
   "
 ></div>
-<div
-  *ngIf="!isHome; else outHome"
+
+<div *ngIf="!isHome; else outHome"
   fxLayout="row"
   fxLayoutAlign="center center"
   style="border-radius: 40px 40px 0 0"
@@ -295,15 +287,15 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+
 <ng-template #outHome>
   <router-outlet ></router-outlet>
-
-
 </ng-template>
 
 <!--<div [ngStyle]="{'margin-top': '2em'}"> -->
 <app-footer
   [sites]="footerSites"
   [information]="footerInformation"
-></app-footer>
+>
+</app-footer>
 <!-- </div> -->
